src/objects/References__c.object
<CustomObject>
    <fields>
        <fullName>Additional_signor_s_on_the_lease__c</fullName>
        <label>Additional signor(s) on the lease?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Addresses_Match__c</fullName>
        <label>Addresses Match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_delinquencies_in_the_rental_payment__c</fullName>
        <label>Any delinquencies in the rental payment?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_lease_payment_delinquencies__c</fullName>
        <label>Any lease payment delinquencies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_there_other_signors_on_the_lease__c</fullName>
        <label>Are there other signors on the lease?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_current_with_your_vendors__c</fullName>
        <label>Are you current with your vendors?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Ownership_Matches__c</fullName>
        <label>Business Ownership Matches</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_locations_owned_by_principal__c</fullName>
        <label>Business locations owned by principal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_statements_are_suspect__c</fullName>
        <label>Card statements are suspect</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Advance_Balance_Owed_if_applicable__c</fullName>
        <label>Cash Advance Balance Owed(if applicable)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chance_of_extending_the_tenant_s_lease__c</fullName>
        <label>Chance of extending the tenant&apos;s lease?</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_on_Additional_Signors_Response__c</fullName>
        <label>Comments on Additional Signors Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Business_Sale_Response__c</fullName>
        <label>Comments on Business Sale Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Contracted_Business_Response__c</fullName>
        <label>Comments on Contracted Business Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Vendor_Question_Responses__c</fullName>
        <label>Comments on Vendor Question Responses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_capital_Use_Discrepency__c</fullName>
        <label>Comments on capital Use Discrepency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_the_Business_Opening__c</fullName>
        <label>Comments on the Business Opening</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_the_Merchant_s_character__c</fullName>
        <label>Comments the Merchant&apos;s character</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_length_of_time_with_processor__c</fullName>
        <label>Confirm length of time with processor</label>
        <picklist>
            <picklistValues>
                <fullName>0 to 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Delinquencies__c</fullName>
        <label>Current Delinquencies</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 12 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Processor_s_Name__c</fullName>
        <label>Current Processor&apos;s Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_foresee_the_merchant_closing__c</fullName>
        <label>Do you foresee the merchant closing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_vendors__c</fullName>
        <label>Do you have any vendors?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_the_intended_use_match_the_app__c</fullName>
        <label>Does the intended use match the app?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_the_merchant_own_another_business__c</fullName>
        <label>Does the merchant own another business?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dollars_Delinquent__c</fullName>
        <label>Dollars Delinquent</label>
        <picklist>
            <picklistValues>
                <fullName>$100 to $500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$501 to $2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,501 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $5,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Explain_any_delinquent_behavior__c</fullName>
        <label>Explain any delinquent behavior</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gross_monthly_sales_of_the_business__c</fullName>
        <label>Gross monthly sales of the business</label>
        <picklist>
            <picklistValues>
                <fullName>$2,500 to $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 to $25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,001 to $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,001 to $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $100,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_the_merchant_had_an_advance_before__c</fullName>
        <label>Has the merchant had an advance before?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_started_eviction_proceedings__c</fullName>
        <label>Have you started eviction proceedings?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_of_Opertaion__c</fullName>
        <label>Hours of Opertaion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_behind_are_you_with_your_vendors__c</fullName>
        <label>How behind are you with your vendors?</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500 to $1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,001 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 to $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $10,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_sqft_does_the_merchant_occupy__c</fullName>
        <label>How many sqft does the merchant occupy?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_ownership_do_you_have__c</fullName>
        <label>How much ownership do you have?</label>
        <picklist>
            <picklistValues>
                <fullName>30% to 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51% to 99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_closing_in_the_next_year_what_period__c</fullName>
        <label>If closing in the next year what period?</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_not_how_far_behind_are_the_dues__c</fullName>
        <label>If not how far behind are the dues?</label>
        <picklist>
            <picklistValues>
                <fullName>$500 to $1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,001 to $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $10,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_other_then_what__c</fullName>
        <label>If other, then what?</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_are_you_current_on_franchise_dues__c</fullName>
        <label>If so are you current on franchise dues?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_so_for_how_much__c</fullName>
        <label>If so, for how much?</label>
        <picklist>
            <picklistValues>
                <fullName>$100 to $500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$501 to $1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,001 to $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,001 to $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $10,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_so_with_which_Cash_Advance_Company__c</fullName>
        <label>If so, with which Cash Advance Company?</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_the_merchant_is_selling_then_when__c</fullName>
        <label>If the merchant is selling, then when?</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_When__c</fullName>
        <label>If yes, When?</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_months__c</fullName>
        <label>If yes, how many months?</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_does_not_agree_with_applican__c</fullName>
        <label>Information does not agree with applican</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_business_closing_anytime_soon__c</fullName>
        <label>Is the business closing anytime soon?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_a_triple_net_lease__c</fullName>
        <label>Is this a triple net lease?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_business_a_franchise__c</fullName>
        <label>Is this business a franchise?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merchant_Interview_Completed_Date__c</fullName>
        <label>Merchant Interview Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_s_of_additional_signor_s__c</fullName>
        <label>Name(s) of additional signor(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Peak_Season__c</fullName>
        <label>Non Peak Season</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>Number of Full-Time Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 to 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Tables_if_an_eatery__c</fullName>
        <label>Number of Tables (if an eatery)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_part_Time_Employees__c</fullName>
        <label>Number of part-Time Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 to 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Master Detail relationship to References Object</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overall_Merchant_interview_assessment__c</fullName>
        <label>Overall Merchant interview assessment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Peak_Season__c</fullName>
        <label>Peak Season</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_numbers_match__c</fullName>
        <label>Phone numbers match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_location__c</fullName>
        <label>Physical location</label>
        <picklist>
            <picklistValues>
                <fullName>Stand Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <label>Services Offered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Notes_on_Merchant_s_Identity__c</fullName>
        <label>Special Notes on Merchant&apos;s Identity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Square_Footage_of_the_Location__c</fullName>
        <label>Square Footage of the Location</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspect_Landlord_Interview__c</fullName>
        <label>Suspect Landlord Interview</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspect_Merchant_interview__c</fullName>
        <label>Suspect Merchant interview</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unacceptable_Check__c</fullName>
        <label>Unacceptable Check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unsatisfactory_Neighborhood_check__c</fullName>
        <label>Unsatisfactory Neighborhood check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_if_availible__c</fullName>
        <label>Website (if availible)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_businesses_are_nearby__c</fullName>
        <label>What businesses are nearby?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_business_type__c</fullName>
        <label>What is the business type?</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Washe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing &amp; Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer-Related Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drycleaner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Convenience &amp; Variety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Wear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair &amp; Nail Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel/Motel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing-Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawn &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limosine &amp; Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquor Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoe Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sporting Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tobacco Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toy Store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_is_the_primary_leaseholder_s_name__c</fullName>
        <label>What is the primary leaseholder&apos;s name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_of_the_business_is_contracted__c</fullName>
        <label>What % of the business is contracted?</label>
        <picklist>
            <picklistValues>
                <fullName>1% to 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26% to 50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 51%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_did_you_purchase_start_the_business__c</fullName>
        <label>When did you purchase/start the business</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When_does_the_lease_expire__c</fullName>
        <label>When does the lease expire?</label>
        <picklist>
            <picklistValues>
                <fullName>1 to 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 to 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 5 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_was_business_opened__c</fullName>
        <label>When was business opened?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Will_you_sell_the_business_anytime_soon__c</fullName>
        <label>Will you sell the business anytime soon?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_residences_in_the_last_12_mo__c</fullName>
        <label>&gt; 3 residences in the last 12 mo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>if_so_then_what_type__c</fullName>
        <label>if so, then what type?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>References</label>
    <nameField>
        <label>References  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>